[gd_scene load_steps=9 format=3 uid="uid://br31e4fmphpmr"]

[ext_resource type="Script" path="res://MenuUI/LocationBoxInfo.gd" id="1_fw323"]
[ext_resource type="Texture2D" uid="uid://bdlyc5025jncv" path="res://TemporaryIcons/splash_glyph.png" id="2_86nd8"]
[ext_resource type="LabelSettings" uid="uid://dmegync5g3cdk" path="res://Label Settings/heading.tres" id="3_k10af"]
[ext_resource type="Theme" uid="uid://cm5kjp18f74ky" path="res://Themes/h_separator_theme.tres" id="4_m6g11"]
[ext_resource type="Theme" uid="uid://s8w5rxc718i4" path="res://Themes/rounded_panel_theme.tres" id="5_xf3qo"]
[ext_resource type="Theme" uid="uid://b21uw6m72u8is" path="res://Themes/margin_container_all_sides.tres" id="6_s34mf"]
[ext_resource type="LabelSettings" uid="uid://dg11wbrle5ncm" path="res://Label Settings/description.tres" id="7_uo5yh"]
[ext_resource type="Texture2D" uid="uid://bwi0cxx454owf" path="res://TemporaryIcons/enemy_basic.png" id="8_pkn50"]

[node name="LocationBox" type="VBoxContainer"]
script = ExtResource("1_fw323")

[node name="LocationImage" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("2_86nd8")
stretch_mode = 5

[node name="LocationName" type="Label" parent="."]
layout_mode = 2
text = "LOCATION"
label_settings = ExtResource("3_k10af")
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2
theme = ExtResource("4_m6g11")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
theme = ExtResource("5_xf3qo")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme = ExtResource("6_s34mf")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="DifficultyDisplay" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Difficulty: Difficulty"
label_settings = ExtResource("7_uo5yh")

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_m6g11")

[node name="RoomIcons" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/RoomIcons"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("8_pkn50")
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/RoomIcons"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("8_pkn50")
stretch_mode = 5

[node name="TextureRect3" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/RoomIcons"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("8_pkn50")
stretch_mode = 5
